--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,7 @@ const currentYear = new Date().getFullYear();
         <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
       </li>
       <li>
-        <a href="mailto:rodriguezsantiago0230@hotmail.com" class="hover:underline">Contacto</a>
+        <a id="contacto" href="mailto:rodriguezsantiago0230@hotmail.com" class="hover:underline">Contacto</a>
       </li>
     </ul>
   </div>
