--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -13,8 +13,8 @@ const personalImageAlt = 'Erick S Rodriguez';
     height="200"
     src="/images/me.jpeg"
     alt={personalImageAlt}
-    class="order-1 object-cover w-64 h-full p-1 bg-white md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl
-    dark:bg-yellow-500/5 ring-1 ring-white/20"
+    class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl
+    bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20"
     style="object-position: 50% 50%"
   />
 </article>
