--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const currentYear = new Date().getFullYear();
 ---
 
 <footer
-  class="rounded-lg shadow-sm m-4 bg-black/5 dark:bg-black/20 backdrop-blur-lg w-full mx-auto container lg:max-2-4xl md:max-w-2xl
+  class="rounded-lg shadow-sm m-4 bg-black/5 dark:bg-white/10 dark:bgshadow-white/20 backdrop-blur-lg w-full mx-auto container lg:max-2-4xl md:max-w-2xl
   mb-10 flex justify-center">
   <div class="w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between">
     <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
