--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,10 +2,10 @@
 const currentYear = new Date().getFullYear();
 ---
 
+<!-- NO TOCAR POSIBLE VERSION FINAL -->
 <footer
-  class="rounded-lg shadow-sm m-4 bg-black/5 dark:bg-white/10 dark:bgshadow-white/20 backdrop-blur-lg w-full mx-auto container lg:max-2-4xl md:max-w-2xl
-  mb-10 flex justify-center">
-  <div class="w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between">
+  class="opacity-80 m-4 min-[375px]:pl-4 md:pl-0 mt-16 w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-10 flex justify-center">
+  <div class="rounded-lg w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between py-4">
     <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
       >© 2025-{currentYear}
       <a href="https://github.com/Kcireog" class="hover:underline">Kcireog</a>. Con ayuda de midudev, su comunidad y un
