--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import AboutMe from '@/components/AboutMe.astro';
 import Layout from '@/layouts/Layout.astro';
-import Briefcase from '@/components/icons/BriefCase.astro';
+// import Briefcase from '@/components/icons/BriefCase.astro';
+import Library from '@/components/icons/Library.astro';
 import ProfileCheck from '@/components/icons/ProfileCheck.astro';
 import CodeIcon from '@/components/icons/Code.astro';
-import Experience from '@/components/Experience.astro';
+// import Experience from '@/components/Experience.astro';
+import AcademyExperience from '@/components/AcademyExperience.astro';
 import TitleSection from '@/components/TitleSection.astro';
 import Projects from '@/components/Projects.astro';
 import Hero from '@/components/Hero.astro';
@@ -25,10 +27,10 @@ import SectionContainer from '@/components/SectionContainer.astro';
   <div class="space-y-24">
     <SectionContainer id="experiencia">
       <TitleSection>
-        <Briefcase class="w-8 h-8" />
-        Experiencia laboral
+        <Library class="w-8 h-8" />
+        Experiencia Academica
       </TitleSection>
-      <Experience />
+      <AcademyExperience />
     </SectionContainer>
 
     <SectionContainer id="proyectos">
